syntax = "proto3";

import "google/protobuf/duration.proto";

package proto;

service Agent {
  rpc Run(stream AgentRequest) returns (stream AgentResponse);
}

message AgentRequest {
  Plan plan = 1;
}

message AgentResponse {
  uint64 num_segments = 1;
}

message Plan {
  repeated Segment segments = 1;
  string target = 2;
}

message Segment {
  oneof segment {
    FixedRateSegment fixed_rate_segment = 1;
    LinearRateSegment linear_rate_segment = 2;
  }
}

message FixedRateSegment {
  float rate = 1;
  google.protobuf.Duration total_duration = 2;
}

message LinearRateSegment {
  float rate_start = 1;
  float rate_end = 2;
  google.protobuf.Duration total_duration = 3;
}
